# mpn-okinawa

./: .gitignore  Cargo.toml  PLAN.md  README.md  pyproject.toml  wick_cli.py
src/: helper.rs  lib.rs  main.rs  step_1_expand.rs  step_2_normal_order.rs  step_3_filter.rs  step_4_deltas.rs  step_4b_reclassify.rs  step_5_labels.rs  step_6_cleanup.rs  step_6a_linked_cluster.rs  step_7_output.rs  step_8_denominator.rs  term.rs
subprojects/graph_consolidation/: README.md  demo_mp3.py  prototype.py
tests/: rust_tests.rs  test_denominator_verification.py  test_mp1.py  test_mp2.py  test_mp3.py  test_mp_smoke.py  test_pipeline_steps.py  test_step2_output.py  test_step3_deltas.py  test_step4_labels.py  test_step5_filter.py  test_step6_expand.py  test_step7_cleanup.py  test_step8_normal_order.py  test_step_8_denominator.py
wick/: __init__.py  cli.py  helper.py  parse_pdaggerq.py  step_1_expand.py  step_2_normal_order.py  step_3_filter.py  step_4_deltas.py  step_4b_reclassify.py  step_5_labels.py  step_6_cleanup.py  step_6a_linked_cluster.py  step_6b_projection.py  step_6c_graph_connected.py  step_6d_graph_isomorphism.py  step_7_output.py  step_8_denominator.py  term.py
